Fix company profile error after register

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -62,21 +62,27 @@
                                     <a href="/DashBoard" class="block w-full">AdminDashboard</a>
                                 </li>
                             }
-                            else if (userRole == "Seller")
-                            {
-                                <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                    <a href="/CompanyEdit/@userIdString" class="block w-full">Company Profile</a>
-                                </li>
-                                <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                    <a href="/BatchIndex" class="block w-full">Batch Management</a>
-                                </li>
-                            }
+                           
                             else if (userRole == "DeliveryPersonnel")
                             {
                                 <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
                                     <a href="/DeliveryDetail" class="block w-full">Delivery Detail</a>
                                 </li>
                             }
+                            @{
+                                var companyIdString = HttpContextAccessor.HttpContext.Session.GetString("CompanyId");
+                            }
+
+                            @if (userRole == "Seller")
+                            {
+                                <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                                    <a href="/CompanyEdit/@companyIdString" class="block w-full">Company Profile</a>
+                                </li>
+                                <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                                    <a href="/BatchIndex" class="block w-full">Batch Management</a>
+                                </li>
+                            }
+
                             <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
                                 <form method="post" asp-page="/Login/Logout">
                                     <button type="submit" class="w-full text-left">Logout</button>
