--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Register.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Register.cshtml
@@ -53,7 +53,7 @@
                            class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"
                            placeholder="Enter your password" required />
                     <span asp-validation-for="RegisterRequest.Password" class="text-red-500"></span>
-                    <p class="text-xs text-red-500 mt-1">Mật khẩu phải có ít nhất 8 ký tự, bao gồm chữ hoa, chữ thường, số và ký tự đặc biệt.</p>
+                    <p class="text-xs text-red-500 mt-1">Password must have at least 8 characters, including uppercase letters, lowercase letters, numbers and special characters.</p>
 
                 </div>
                 <div class="form-group mt-4">
