--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/CompanyPages/CompanyEdit.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/CompanyPages/CompanyEdit.cshtml
@@ -13,9 +13,14 @@
                 <span class="block sm:inline">@TempData["SuccessMessage"]</span>
             </div>
         }
+        @if (TempData["ErrorMessage"] != null)
+        {
+            <div id="errorMessage" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4">
+                <span class="block sm:inline">@TempData["ErrorMessage"]</span>
+            </div>
+        }
+
         <form method="post" id="editCompanyForm">
-            @Html.AntiForgeryToken()
-            <div asp-validation-summary="ModelOnly" class="text-danger mb-4"></div>
 
             <div class="flex flex-wrap -mx-2">
                 <div class="w-full px-2 mb-4">
@@ -72,10 +77,11 @@
 
                 <div class="w-full sm:w-1/2 px-2 mb-4">
                     <label asp-for="UpdateCompanyDTO.Status" class="block text-gray-700 font-medium mb-2">Status</label>
-                    <select asp-for="UpdateCompanyDTO.Status" asp-items="Html.GetEnumSelectList<BusinessObject.Enum.EnumList.Status>()" class="border border-gray-400 p-2 w-full rounded-lg focus:outline-none focus:border-blue-400">
+                    <select asp-for="UpdateCompanyDTO.Status" asp-items="Html.GetEnumSelectList<BusinessObject.Enum.EnumList.Status>()" class="border border-gray-400 p-2 w-full rounded-lg bg-gray-200 text-gray-500 cursor-not-allowed" disabled>
                     </select>
                     <span asp-validation-for="UpdateCompanyDTO.Status" class="text-danger"></span>
                 </div>
+
             </div>
 
             <div class="flex justify-between items-center mt-6">
