--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -66,7 +66,7 @@
                             else if (userRole == "DeliveryPersonnel")
                             {
                                 <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                    <a href="/DeliveryDetail" class="block w-full">Delivery Detail</a>
+                                    <a href="/DeliveryIndex" class="block w-full">Delivery</a>
                                 </li>
                             }
                             @{
