--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/BuyFlowerDetail.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/BuyFlowerDetail.cshtml
@@ -98,21 +98,25 @@
                         }
 
                         <!-- Add to Cart Button -->
-                        <div class="mt-6 flex items-center space-x-4">
+                        @* Render Add to Cart button only if the user role is not Seller *@
+                        @if (Model.UserRole != "Seller")
+                        {
+                            <div class="mt-6 flex items-center space-x-4">
                                 <form method="post" asp-page-handler="GeneratePaymentUrl">
                                     <button type="submit" class="btn btn-primary">Buy</button>
                                     <input type="hidden" name="flowerId" value="@Model.Flower.FlowerId" />
                                 </form>
 
 
-                            <form id="antiforgeryform" onsubmit="return false;">
-                                @Html.AntiForgeryToken()
-                                <button onclick="addToCart('@Model.Flower.FlowerId', '@Model.Flower.Name', '@Model.Flower.PricePerUnit')"
-                                        class="px-6 py-2 bg-blue-600 text-white font-bold rounded-full hover:bg-blue-700 transition duration-300">
-                                    Add to cart
-                                </button>
-                            </form>
-                        </div>
+                                <form id="antiforgeryform" onsubmit="return false;">
+                                    @Html.AntiForgeryToken()
+                                    <button onclick="addToCart('@Model.Flower.FlowerId', '@Model.Flower.Name', '@Model.Flower.PricePerUnit')"
+                                            class="px-6 py-2 bg-blue-600 text-white font-bold rounded-full hover:bg-blue-700 transition duration-300">
+                                        Add to cart
+                                    </button>
+                                </form>
+                            </div>
+                        }
 
                     </div>
                 </div>
@@ -152,70 +156,70 @@
             <div id="reviewsList" class="w-full">
                 @foreach (var review in Model.Reviews)
                 {
-                      var timeDifference = DateTime.Now - review.ReviewDate;
+                    var timeDifference = DateTime.Now - review.ReviewDate;
                     <div class="w-full bg-white p-4 rounded-lg shadow-md relative mb-4" data-rating="@review.Rating">
                         <div class="absolute top-2 right-2 group">
-                        <button class="p-1 rounded-full hover:bg-gray-200 focus:outline-none">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
-                            </svg>
-                        </button>
+                            <button class="p-1 rounded-full hover:bg-gray-200 focus:outline-none">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+                                </svg>
+                            </button>
 
-                        <!-- Dropdown menu -->   
-                        @if (review.CustomerId == currentUserId)
-                        {
-                        <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32 right-0 mt-2 shadow-lg">
-                         
-                                <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                    <button onclick="showUpdateModal(@review.ReviewId, @review.Rating, '@review.Feedback')" class="w-full text-left ">
-                                        Edit
-                                    </button>
-                                </li>
-                                <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                    <form method="post" asp-page-handler="DeleteReview" asp-route-reviewId="@review.ReviewId" asp-route-flowerId="@Model.Flower.FlowerId">
-                                        <button type="submit" class="w-full text-left">Delete </button>
-                                    </form>
-                                </li>
+                            <!-- Dropdown menu -->
+                            @if (review.CustomerId == currentUserId)
+                            {
+                                <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32 right-0 mt-2 shadow-lg">
 
-                            </ul>
-                        }
-                    </div>
+                                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                                        <button onclick="showUpdateModal(@review.ReviewId, @review.Rating, '@review.Feedback')" class="w-full text-left ">
+                                            Edit
+                                        </button>
+                                    </li>
+                                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                                        <form method="post" asp-page-handler="DeleteReview" asp-route-reviewId="@review.ReviewId" asp-route-flowerId="@Model.Flower.FlowerId">
+                                            <button type="submit" class="w-full text-left">Delete </button>
+                                        </form>
+                                    </li>
 
-                    <div class="flex flex-col md:flex-row justify-between w-full">
-                        <div class="flex flex-col">
-                            <p class="text-xl font-medium leading-normal text-gray-800">
-                                @(!string.IsNullOrEmpty(review.CustomerName) ? review.CustomerName : "Anonymous")
-                            </p>
-                            <div class="flex flex-row mt-1">
-                                @for (int i = 1; i <= 5; i++)
-                                {
-                                    <svg class="w-5 h-5 @(i <= review.Rating ? "text-yellow-400" : "text-gray-300")" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                                        <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
-                                    </svg>
-                                }
+                                </ul>
+                            }
+                        </div>
+
+                        <div class="flex flex-col md:flex-row justify-between w-full">
+                            <div class="flex flex-col">
+                                <p class="text-xl font-medium leading-normal text-gray-800">
+                                    @(!string.IsNullOrEmpty(review.CustomerName) ? review.CustomerName : "Anonymous")
+                                </p>
+                                <div class="flex flex-row mt-1">
+                                    @for (int i = 1; i <= 5; i++)
+                                    {
+                                        <svg class="w-5 h-5 @(i <= review.Rating ? "text-yellow-400" : "text-gray-300")" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+                                        </svg>
+                                    }
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="mt-3">
-                        <p class="text-base leading-normal text-gray-600">@review.Feedback</p>
-                    </div>
-                    <div class="mt-4 text-sm text-gray-500">
-                        Review Date: @review.ReviewDate.ToShortDateString()
-                        @if (timeDifference.TotalHours <= 24)
-                        {
-                            @if (timeDifference.TotalMinutes < 60)
+                        <div class="mt-3">
+                            <p class="text-base leading-normal text-gray-600">@review.Feedback</p>
+                        </div>
+                        <div class="mt-4 text-sm text-gray-500">
+                            Review Date: @review.ReviewDate.ToShortDateString()
+                            @if (timeDifference.TotalHours <= 24)
                             {
-                                <span>(Reviewed @Math.Floor(timeDifference.TotalMinutes) minutes ago)</span>
+                                @if (timeDifference.TotalMinutes < 60)
+                                {
+                                    <span>(Reviewed @Math.Floor(timeDifference.TotalMinutes) minutes ago)</span>
+                                }
+                                else
+                                {
+                                    <span>(Reviewed @Math.Floor(timeDifference.TotalHours) hours ago)</span>
+                                }
                             }
-                            else
-                            {
-                                <span>(Reviewed @Math.Floor(timeDifference.TotalHours) hours ago)</span>
-                            }
-                        }
+                        </div>
                     </div>
-                </div>
-            }
+                }
             </div>
         }
         else
