--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/FlowerDetailInBatch.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/FlowerDetailInBatch.cshtml
@@ -11,11 +11,12 @@
 </head>
 <body>
     <div class="container mx-auto px-4 py-6">
-        <h2 class="text-3xl font-bold text-black mb-8">Flowers in Batch</h2>
         <a href="/BatchIndex"
            class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mb-4 inline-block">
             Back to Batches
         </a>
+        <h2 class="text-3xl font-bold text-black mb-8">Flowers in Batch</h2>
+       
 
         @if (Model.Flowers != null && Model.Flowers.Any())
         {
@@ -42,7 +43,7 @@
                                 <img src="@flower.Image" alt="@flower.Name" class="w-12 h-12 object-cover" />
                             </td>
                             <td class="border px-4 py-2">@flower.Description</td>
-                            <td class="border px-4 py-2">$@flower.PricePerUnit.ToString("F2")</td>
+                            <td class="border px-4 py-2">@String.Format("{0:N0}", flower.PricePerUnit) đ</td>
                             <td class="border px-4 py-2">@flower.RemainingQuantity</td>
                             <td class="p-4 whitespace-nowrap">
                                 <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full
